fix doc and code
