# docs/swagger.json
@@ -7,7 +7,7 @@
     "version": "1.0"
   },
   "paths": {
-    "/contacts": {
+    "/api/contacts": {
       "get": {
         "description": "get contacts",
         "consumes": [
@@ -20,15 +20,6 @@
           "contacts"
         ],
         "summary": "List contacts",
-        "parameters": [
-          {
-            "type": "string",
-            "format": "email",
-            "description": "name search by q",
-            "name": "q",
-            "in": "query"
-          }
-        ],
         "responses": {
           "200": {
             "description": "OK",
@@ -42,6 +33,11 @@
         }
       },
       "post": {
+        "security": [
+          {
+            "JWT": []
+          }
+        ],
         "description": "create contact",
         "consumes": [
           "application/json"
@@ -74,7 +70,7 @@
         }
       }
     },
-    "/contacts/{id}": {
+    "/api/contacts/{id}": {
       "get": {
         "description": "get contact",
         "consumes": [
@@ -106,6 +102,11 @@
         }
       },
       "put": {
+        "security": [
+          {
+            "JWT": []
+          }
+        ],
         "description": "update contact",
         "consumes": [
           "application/json"
@@ -133,6 +134,11 @@
         }
       },
       "delete": {
+        "security": [
+          {
+            "JWT": []
+          }
+        ],
         "description": "delete contact",
         "consumes": [
           "application/json"
@@ -160,8 +166,13 @@
         }
       }
     },
-    "/contacts/{id}/save": {
+    "/api/contacts/{id}/save": {
       "post": {
+        "security": [
+          {
+            "JWT": []
+          }
+        ],
         "description": "save contact",
         "consumes": [
           "application/json"
@@ -198,8 +209,13 @@
         }
       }
     },
-    "/contacts/{id}/saved": {
+    "/api/contacts/{id}/saved": {
       "get": {
+        "security": [
+          {
+            "JWT": []
+          }
+        ],
         "description": "get saved contacts",
         "consumes": [
           "application/json"
@@ -233,6 +249,11 @@
         }
       },
       "delete": {
+        "security": [
+          {
+            "JWT": []
+          }
+        ],
         "description": "delete saved contact",
         "consumes": [
           "application/json"
@@ -268,20 +289,307 @@
           }
         }
       }
+    },
+    "/api/login": {
+      "post": {
+        "description": "login user",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "tags": [
+          "users"
+        ],
+        "summary": "Login user",
+        "parameters": [
+          {
+            "description": "login",
+            "name": "login",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/transport.LoginUserRequest"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "object",
+              "additionalProperties": {
+                "type": "string"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/me": {
+      "get": {
+        "security": [
+          {
+            "JWT": []
+          }
+        ],
+        "description": "get user",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "tags": [
+          "users"
+        ],
+        "summary": "Get user",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/db.User"
+            }
+          }
+        }
+      }
+    },
+    "/api/otp": {
+      "post": {
+        "description": "send OTP",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "tags": [
+          "users"
+        ],
+        "summary": "Send OTP",
+        "parameters": [
+          {
+            "description": "email",
+            "name": "email",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/transport.SendOTPRequest"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/otp-verify": {
+      "post": {
+        "description": "verify OTP",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "tags": [
+          "users"
+        ],
+        "summary": "Verify OTP",
+        "parameters": [
+          {
+            "description": "verify",
+            "name": "verify",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/transport.VerifyOTPRequest"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/set-password": {
+      "post": {
+        "description": "set password",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "tags": [
+          "users"
+        ],
+        "summary": "Set password",
+        "parameters": [
+          {
+            "description": "password",
+            "name": "password",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/transport.SetPasswordRequest"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/tags": {
+      "get": {
+        "description": "list tags",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "tags": [
+          "tags"
+        ],
+        "summary": "List tags",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/db.Tag"
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "security": [
+          {
+            "JWT": []
+          }
+        ],
+        "description": "create tag",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "tags": [
+          "tags"
+        ],
+        "summary": "Create tag",
+        "parameters": [
+          {
+            "description": "tag",
+            "name": "tag",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/db.Tag"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created",
+            "schema": {
+              "$ref": "#/definitions/db.Tag"
+            }
+          }
+        }
+      }
+    },
+    "/api/tags/{id}": {
+      "delete": {
+        "security": [
+          {
+            "JWT": []
+          }
+        ],
+        "description": "delete tag",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "tags": [
+          "tags"
+        ],
+        "summary": "Delete tag",
+        "parameters": [
+          {
+            "type": "integer",
+            "description": "tag id",
+            "name": "id",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
     }
   },
   "definitions": {
+    "db.Address": {
+      "type": "object",
+      "properties": {
+        "contact_id": {
+          "type": "integer"
+        },
+        "created_at": {
+          "type": "string"
+        },
+        "deleted_at": {
+          "type": "string"
+        },
+        "external_id": {
+          "type": "string"
+        },
+        "id": {
+          "type": "integer"
+        },
+        "label": {
+          "type": "string"
+        },
+        "location": {
+          "$ref": "#/definitions/db.Point"
+        },
+        "name": {
+          "type": "string"
+        },
+        "updated_at": {
+          "type": "string"
+        }
+      }
+    },
     "db.Contact": {
       "type": "object",
       "properties": {
         "about": {
           "type": "string"
         },
-        "activity": {
+        "activity_name": {
           "type": "string"
         },
         "address": {
-          "type": "string"
+          "$ref": "#/definitions/db.Address"
         },
         "avatar": {
           "type": "string"
@@ -295,13 +603,13 @@
         "email": {
           "type": "string"
         },
-        "full_name": {
-          "type": "string"
-        },
         "id": {
           "type": "integer"
         },
         "name": {
+          "type": "string"
+        },
+        "phone_calling_code": {
           "type": "string"
         },
         "phone_number": {
@@ -336,14 +644,31 @@
     "db.Link": {
       "type": "object",
       "properties": {
+        "contact_id": {
+          "type": "integer"
+        },
         "id": {
           "type": "integer"
+        },
+        "label": {
+          "type": "string"
         },
         "link": {
           "type": "string"
         },
         "type": {
           "type": "string"
+        }
+      }
+    },
+    "db.Point": {
+      "type": "object",
+      "properties": {
+        "lat": {
+          "type": "number"
+        },
+        "lng": {
+          "type": "number"
         }
       }
     },
@@ -358,6 +683,26 @@
         }
       }
     },
+    "db.User": {
+      "type": "object",
+      "properties": {
+        "created_at": {
+          "type": "string"
+        },
+        "email": {
+          "type": "string"
+        },
+        "email_verified": {
+          "type": "boolean"
+        },
+        "id": {
+          "type": "integer"
+        },
+        "updated_at": {
+          "type": "string"
+        }
+      }
+    },
     "transport.DeleteSavedContactRequest": {
       "type": "object",
       "properties": {
@@ -367,12 +712,53 @@
         }
       }
     },
+    "transport.LoginUserRequest": {
+      "type": "object",
+      "properties": {
+        "email": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        }
+      }
+    },
     "transport.SaveContactRequest": {
       "type": "object",
       "properties": {
         "contact_id": {
           "type": "integer",
           "example": 1
+        }
+      }
+    },
+    "transport.SendOTPRequest": {
+      "type": "object",
+      "properties": {
+        "email": {
+          "type": "string"
+        }
+      }
+    },
+    "transport.SetPasswordRequest": {
+      "type": "object",
+      "properties": {
+        "email": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        }
+      }
+    },
+    "transport.VerifyOTPRequest": {
+      "type": "object",
+      "properties": {
+        "email": {
+          "type": "string"
+        },
+        "otp": {
+          "type": "string"
         }
       }
     }
